--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,5 +4,7 @@
   <% @posts.each do |post| %>
   <li> <%= link_to post.title, post_path(post) %> </li>
   <li> <img src="<%= post.img_url%>"> </li><br>
+  <hr class="style12">
+  <br>
   <% end %>
 </ul>
