--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "&larr; Back".html_safe, posts_path %>
 <article>
   <h2><%= @post.title %></h2>
-  <p><%= @post.img_url %></p>
+  <p> <img src="<%= @post.img_url%>"> </p>
   <%= link_to "Edit Post", edit_post_path(@post) %>
   <%= link_to "Delete Post", post_path(@post), method: :delete %>
   <div class='comments'>
